--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,7 @@
     box-sizing: border-box;
     font-family: Roboto;
     background: #eee;
-    max-width: 1440px;
 }
-
 /* ========== HEADER ============ */
 
 header > ul li{
@@ -83,9 +81,12 @@ main article h2{
     padding: 8vh 0 6vh 6vw;
 }
 
+main article div{
+    padding-left: 12vw;
+}
+
 main article div img{
     width: 60%;
-    padding-left: 12vw;
 }
 
 main article div p{
@@ -130,9 +131,12 @@ main section:nth-of-type(2) p:nth-of-type(3){
     padding: 0 0 6vh 0;
 }
 
+main div article{
+    padding-left: 12vw;
+}
+
 main div article a img{
     width: 60%;
-    padding-left: 12vw;
 }
 
 main div article p{
